setup and get tileset

--- a/DragonWrapper_SDL2.cbp
+++ b/DragonWrapper_SDL2.cbp
@@ -45,6 +45,8 @@
 		</Linker>
 		<Unit filename="drw_sdl2.cpp" />
 		<Unit filename="drw_sdl2.h" />
+		<Unit filename="drw_sdl2_rect.cpp" />
+		<Unit filename="drw_sdl2_rect.h" />
 		<Unit filename="libtest.cpp">
 			<Option target="Debug" />
 		</Unit>
